@@ -26,6 +26,7 @@ Version 0.4m
  - You need to be lactating (a few Bovia or Gestarium potions should do it)
 * Removed Kyna from the game (no longer available even in debug)
 * Added Isla the sable morph. Find her at the highland spring (yes, you need to do Asche's third quest first)
+ - The spring itself has transformative effects, turning you toward a ferret morph
 
 --------------------------------------------
              PREVIOUS VERSIONS
